samples/_failures_safe/1761513953_f63ae0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f015fa2f.c: In function ‘main’:
./samples/SAFE/__tmp_f015fa2f.c:144:32: error: ‘decompress’ undeclared (first use in this function); did you mean ‘decompress_rle’?
  144 |     size_t decompressed_size = decompress
      |                                ^~~~~~~~~~
      |                                decompress_rle
./samples/SAFE/__tmp_f015fa2f.c:144:32: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_f015fa2f.c:144:5: error: expected ‘,’ or ‘;’ at end of input
  144 |     size_t decompressed_size = decompress
      |     ^~~~~~
./samples/SAFE/__tmp_f015fa2f.c:144:5: error: expected declaration or statement at end of input
